fix z-index of alerts and error tooltip for pipeline name

--- a/cdap-ui/app/features/hydratorplusplus/toppanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/toppanel.less
@@ -117,6 +117,7 @@ body.theme-cdap {
     }
 
     .error-tooltip {
+      z-index: 1029;
       &.top {
         .tooltip-arrow {
           border-top: 5px solid @brand-danger;
